Fix footer CTA hover contrast

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -128,6 +128,19 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.btn-outline-light {
+  color: #fff;
+  border-color: rgba(255, 255, 255, 0.75);
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: $primary;
+    background-color: #fff;
+    border-color: #fff;
+  }
+}
+
 .badge-soft-primary {
   background: rgba($primary, 0.1);
   color: $primary;
